src/test/ui/const-eval/issue-43197.stderr
warning: attempt to subtract with overflow
  --> $DIR/issue-43197.rs:18:20
   |
LL |     const X: u32 = 0-1;
   |                    ^^^
   |
   = note: #[warn(const_err)] on by default

error[E0080]: constant evaluation error
  --> $DIR/issue-43197.rs:22:23
   |
LL |     println!("{} {}", X, Y);
   |                       ^ referenced constant has errors

warning: attempt to subtract with overflow
  --> $DIR/issue-43197.rs:20:24
   |
LL |     const Y: u32 = foo(0-1);
   |                        ^^^

error[E0080]: constant evaluation error
  --> $DIR/issue-43197.rs:22:26
   |
LL |     println!("{} {}", X, Y);
   |                          ^ referenced constant has errors

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0080"
